<resources>
    <string name="app_name">FlightControl</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Adicionar</string>
    <string name="flights">Voos</string>
    <string name="all">Todos</string>
    <string name="finished">Concluídos</string>
    <string name="canceled">Cancelados</string>
    <string name="to_go">A realizar</string>
    <string name="on_trip">Em viagem</string>
    <string name="empty_list">Lista vazia</string>
    <string name="status">Status</string>
    <string name="arrival">Chegada</string>
    <string name="departure">Partida</string>
    <string name="id">ID</string>
    <string name="flights_overview">Visão geral dos Voos</string>
    <string name="flight_id">ID do Voo</string>
    <string name="departure_airport">Aeroporto de partida</string>
    <string name="arrival_airport">Aeroporto de destino</string>
    <string name="departure_date">Data de saida</string>
    <string name="departure_hour">Hora da saida</string>
    <string name="arrival_date">Data de chegada</string>
    <string name="arrival_hour">Hora de chegada</string>
    <string name="save">Salvar</string>
</resources>