<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="br.vino.flightcontrol.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_flights"
        android:name="br.vino.flightcontrol.ui.dashboard.DashboardFragment"
        android:label="@string/flights"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="br.vino.flightcontrol.ui.notifications.NotificationsFragment"
        android:label="@string/add"
        tools:layout="@layout/fragment_notifications" />
</navigation>