<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="ORD - LAX" />

    <TextView
        android:id="@+id/tv_flight_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_flight_id_value"
        app:layout_constraintStart_toStartOf="@id/tv_flight_id_value"
        app:layout_constraintTop_toBottomOf="@id/tv_path"
        android:text="@string/id" />

    <TextView
        android:id="@+id/tv_flight_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/tv_flight_departure_time_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_flight_id"
        tools:text="8SDFD5" />

    <TextView
        android:id="@+id/tv_flight_departure_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_flight_departure_time_value"
        app:layout_constraintStart_toStartOf="@id/tv_flight_departure_time_value"
        app:layout_constraintTop_toBottomOf="@id/tv_path"
        android:text="@string/departure" />

    <TextView
        android:id="@+id/tv_flight_departure_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        app:layout_constraintEnd_toStartOf="@id/tv_flight_arrival_time_value"
        app:layout_constraintStart_toEndOf="@id/tv_flight_id_value"
        app:layout_constraintTop_toBottomOf="@id/tv_flight_departure_time"
        tools:text="10:10" />

    <TextView
        android:id="@+id/tv_flight_arrival_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_flight_arrival_time_value"
        app:layout_constraintStart_toStartOf="@id/tv_flight_arrival_time_value"
        app:layout_constraintTop_toBottomOf="@id/tv_path"
        android:text="@string/arrival" />

    <TextView
        android:id="@+id/tv_flight_arrival_time_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toStartOf="@id/tv_flight_status_value"
        app:layout_constraintStart_toEndOf="@id/tv_flight_departure_time_value"
        app:layout_constraintTop_toBottomOf="@id/tv_flight_arrival_time"
        tools:text="10:10" />

    <TextView
        android:id="@+id/tv_flight_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/tv_flight_status_value"
        app:layout_constraintStart_toStartOf="@id/tv_flight_status_value"
        app:layout_constraintTop_toBottomOf="@id/tv_path"
        android:text="@string/status" />

    <TextView
        android:id="@+id/tv_flight_status_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_flight_arrival_time_value"
        app:layout_constraintTop_toBottomOf="@id/tv_flight_status"
        tools:text="CONCLUIDO" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_flight_status_value"
        android:background="@color/black"
        />

</androidx.constraintlayout.widget.ConstraintLayout>